--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,600,700,800" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="./index.min.css" />
+    <link rel="stylesheet" href="./index.css" />
 
     <script type="application/ld+json">
       {
@@ -24,33 +24,35 @@
             </a>
         </div>
 
-        <a href="#industries" class="nav__link">
-            Industries
-        </a>
+        <div class="nav_menu">
+            <a href="#industries" class="nav__link">
+                Industries
+            </a>
 
-        <a href="#features" class="nav__link">
-            Features
-        </a>
+            <a href="#features" class="nav__link">
+                Features
+            </a>
 
-        <a href="https://meetingapplication.com/clients/" class="nav__link">
-            Clients
-        </a>
+            <a href="https://meetingapplication.com/clients/" class="nav__link">
+                Clients
+            </a>
 
-        <a href="https://meetingapplication.com/pricing-2/" class="nav__link">
-            Pricing
-        </a>
+            <a href="https://meetingapplication.com/pricing-2/" class="nav__link">
+                Pricing
+            </a>
 
-        <a href="https://meetingapplication.com/about-us/" class="nav__link">
-            About us
-        </a>
+            <a href="https://meetingapplication.com/about-us/" class="nav__link">
+                About us
+            </a>
 
-        <a href="https://meetingapplication.com/contact/" class="nav__link">
-            Contact
-        </a>
+            <a href="https://meetingapplication.com/contact/" class="nav__link">
+                Contact
+            </a>
 
-        <a href="http://blog.meetingapplication.com" class="nav__link">
-            Blog
-        </a>
+            <a href="http://blog.meetingapplication.com" class="nav__link">
+                Blog
+            </a>
+        </div>
 
         <a href="https://app.meetingapplication.com" class="nav__button button button--secondary">
             Login
@@ -60,6 +62,9 @@
            class="nav__button button">
             Start free trial
         </a>
+
+        <input id="nav__menu-launcher" onclick="toggleMenu()" type="checkbox" class="nav__menu-launcher-input" />
+        <label for="nav__menu-launcher" class="nav__menu-launcher-label" />
     </div>
 </nav>
 
@@ -528,7 +533,7 @@
     </h2>
 
     <h2 class="free-trial__text">
-        YOR EVENT?
+        YOUR EVENT?
     </h2>
 
     <a href="https://meetingapplication.com/get-your-app/"
@@ -590,97 +595,102 @@
 
 <footer class="footer container">
     <div class="footer__content">
-        <div class="footer__logo">
 
-            <div itemscope itemtype="http://schema.org/Organization">
-                <a itemprop="url">
-                    <img src="images/logo-nav.png" itemprop="logo" />
-                </a>
-            </div>
-
-            <a href="https://meetingapplication.com/get-your-app/"
-               class="button">
-                START FREE TRIAL
-            </a>
-        </div>
 
         <div class="footer__nav">
-            <div class="footer__nav__list">
-                <div class="footer__nav__header">
-                    Product
+            <div class="footer__logo">
+
+                <div class="footer__logo-image" itemscope itemtype="http://schema.org/Organization">
+                    <a itemprop="url">
+                        <img src="images/logo-nav.png" itemprop="logo" />
+                    </a>
                 </div>
 
-                <a href="https://meetingapplication.com/clients/" class="footer__nav__link">
-                    Clients
-                </a>
-
-                <a href="https://meetingapplication.com/pricing-2/" class="footer__nav__link">
-                    Pricing
-                </a>
-
-                <a href="http://help.meetingapplication.com/faq-eng" class="footer__nav__link">
-                    FAQ
-                </a>
-
-                <a href="http://help.meetingapplication.com/meeting-application-eng" class="footer__nav__link">
-                    Helpdesk
-                </a>
-
-                <a href="https://www.g2crowd.com/products/meeting-application/reviews" class="footer__nav__link">
-                    G2 Crowd reviews
+                <a href="https://meetingapplication.com/get-your-app/"
+                   class="button">
+                    START FREE TRIAL
                 </a>
             </div>
 
-            <div class="footer__nav__list">
-                <div class="footer__nav__header">
-                    Resources
+            <div class="footer__nav__menu">
+                <div class="footer__nav__list">
+                    <div class="footer__nav__header">
+                        Product
+                    </div>
+
+                    <a href="https://meetingapplication.com/clients/" class="footer__nav__link">
+                        Clients
+                    </a>
+
+                    <a href="https://meetingapplication.com/pricing-2/" class="footer__nav__link">
+                        Pricing
+                    </a>
+
+                    <a href="http://help.meetingapplication.com/faq-eng" class="footer__nav__link">
+                        FAQ
+                    </a>
+
+                    <a href="http://help.meetingapplication.com/meeting-application-eng" class="footer__nav__link">
+                        Helpdesk
+                    </a>
+
+                    <a href="https://www.g2crowd.com/products/meeting-application/reviews" class="footer__nav__link">
+                        G2 Crowd reviews
+                    </a>
                 </div>
 
-                <a href="https://app.meetingapplication.com" class="footer__nav__link">
-                    Login
-                </a>
+                <div class="footer__nav__list">
+                    <div class="footer__nav__header">
+                        Resources
+                    </div>
 
-                <a href="https://meetingapplication.com/get-your-app/" class="footer__nav__link">
-                    Get Yout App
-                </a>
+                    <a href="https://app.meetingapplication.com" class="footer__nav__link">
+                        Login
+                    </a>
 
-                <a href="https://itunes.apple.com/us/app/meeting-application/id773192307" class="footer__nav__link">
-                    iTunes
-                </a>
+                    <a href="https://meetingapplication.com/get-your-app/" class="footer__nav__link">
+                        Get Yout App
+                    </a>
 
-                <a href="https://play.google.com/store/apps/details?id=us.appswith.meetingapplication"
-                   class="footer__nav__link">
-                    Google Play
-                </a>
+                    <a href="https://itunes.apple.com/us/app/meeting-application/id773192307" class="footer__nav__link">
+                        iTunes
+                    </a>
 
-            </div>
+                    <a href="https://play.google.com/store/apps/details?id=us.appswith.meetingapplication"
+                       class="footer__nav__link">
+                        Google Play
+                    </a>
 
-            <div class="footer__nav__list">
-                <div class="footer__nav__header">
-                    Company
                 </div>
 
-                <a href="https://meetingapplication.com/about-us/" class="footer__nav__link">
-                    About Us
-                </a>
+                <div class="footer__nav__list">
+                    <div class="footer__nav__header">
+                        Company
+                    </div>
 
-                <a href="http://blog.meetingapplication.com" class="footer__nav__link">
-                    Blog
-                </a>
+                    <a href="https://meetingapplication.com/about-us/" class="footer__nav__link">
+                        About Us
+                    </a>
 
-                <a href="https://meetingapplication.com/privacy/" class="footer__nav__link">
-                    Privacy
-                </a>
+                    <a href="http://blog.meetingapplication.com" class="footer__nav__link">
+                        Blog
+                    </a>
 
-                <a href="https://meetingapplication.com/terms/" class="footer__nav__link">
-                    Terms
-                </a>
+                    <a href="https://meetingapplication.com/privacy/" class="footer__nav__link">
+                        Privacy
+                    </a>
 
-                <a href="https://meetingapplication.com/contact/" class="footer__nav__link">
-                    Contact
-                </a>
+                    <a href="https://meetingapplication.com/terms/" class="footer__nav__link">
+                        Terms
+                    </a>
 
+                    <a href="https://meetingapplication.com/contact/" class="footer__nav__link">
+                        Contact
+                    </a>
+
+                </div>
             </div>
+
         </div>
 
         <div class="footer__social">
@@ -695,16 +705,16 @@
             <a href="https://www.facebook.com/MeetingApplication" target="_blank">
                 <img src="./images/facebook.png" class="footer__social__image" />
             </a>
-        </div>
 
-        <div class="footer__stores">
-            <a href="https://play.google.com/store/apps/details?id=us.appswith.meetingapplication" target="_blank">
-                <img src="./images/google-play.png" class="footer__stores__image" />
-            </a>
+            <div class="footer__stores">
+                <a href="https://play.google.com/store/apps/details?id=us.appswith.meetingapplication" target="_blank">
+                    <img src="./images/google-play.png" class="footer__stores__image" />
+                </a>
 
-            <a href="https://itunes.apple.com/us/app/meeting-application/id773192307" target="_blank">
-                <img src="./images/app-store.png" class="footer__stores__image" />
-            </a>
+                <a href="https://itunes.apple.com/us/app/meeting-application/id773192307" target="_blank">
+                    <img src="./images/app-store.png" class="footer__stores__image" />
+                </a>
+            </div>
         </div>
     </div>
     <p class="footer__copyright">
