--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,600,700,800" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./index.min.css" />
 
     <script type="application/ld+json">
       {
