poprawki rwd i ie11

--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
         </div>
 
         <div class="nav_menu">
+            <a href="https://app.meetingapplication.com"
+               class="nav__button nav__button--responsive button button--secondary">
+                Login
+            </a>
+
+            <a href="https://meetingapplication.com/get-your-app/"
+               class="nav__button nav__button--responsive button">
+                Start free trial
+            </a>
+
             <a href="#industries" class="nav__link">
                 Industries
             </a>
