--- a/src/pricing/pricing.html
+++ b/src/pricing/pricing.html
@@ -3,7 +3,6 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,600,700,800" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="./index.min.css" />
 
     <script type="application/ld+json">
       {
@@ -20,7 +19,7 @@
     <div class="nav__container container">
         <div class="nav__logo" itemscope itemtype="http://schema.org/Organization">
             <a itemprop="url">
-                <img src="images/logo-nav.png" itemprop="logo" />
+                <img src="../../images/logo-nav.png" itemprop="logo" />
             </a>
         </div>
 
@@ -81,7 +80,7 @@
 <section class="hero">
 
     <video class="hero__image" autoplay loop muted>
-        <source src="images/header-video.mp4" type="video/mp4">
+        <source src="../../images/header-video.mp4" type="video/mp4">
     </video>
 
     <div class="hero__content">
@@ -92,7 +91,7 @@
         <a href="https://meetingapplication.com/get-your-app/"
            class="button button--big hero__button">
             START FREE TRIAL
-            <img class="core-features__button__icon" src="images/next.svg" />
+            <img class="core-features__button__icon" src="../../images/next.svg" />
         </a>
     </div>
 
@@ -105,31 +104,31 @@
 
     <ul class="trusted-by__list">
         <li class="trusted-by__company">
-            <img src="./images/IDGL.png" />
+            <img src="../../images/IDGL.png" />
         </li>
 
         <li class="trusted-by__company">
-            <img src="./images/coca-cola.png" />
+            <img src="../../images/coca-cola.png" />
         </li>
 
         <li class="trusted-by__company">
-            <img src="images/shelll.png" />
+            <img src="../../images/shelll.png" />
         </li>
 
         <li class="trusted-by__company">
-            <img src="images/rebook.png" />
+            <img src="../../images/rebook.png" />
         </li>
 
         <li class="trusted-by__company">
-            <img src="./images/csiroo.png" />
+            <img src="../../images/csiroo.png" />
         </li>
 
         <li class="trusted-by__company">
-            <img src="./images/bayerr.png" />
+            <img src="../../images/bayerr.png" />
         </li>
 
         <li class="trusted-by__company">
-            <img src="./images/CA.png" />
+            <img src="../../images/CA.png" />
         </li>
     </ul>
 </section>
@@ -151,7 +150,7 @@
         <div class="code-features__video-container">
             <button data-id="video1" class="code-features__video-play"></button>
             <video id="video1" class="code-features__video">
-                <source src="images/1_small.mp4" type="video/mp4">
+                <source src="../../images/1_small.mp4" type="video/mp4">
             </video>
         </div>
 
@@ -169,7 +168,7 @@
         <div class="code-features__video-container">
             <button data-id="video2" class="code-features__video-play"></button>
             <video id="video2" class="code-features__video">
-                <source src="images/2_small.mp4" type="video/mp4">
+                <source src="../../images/2_small.mp4" type="video/mp4">
             </video>
         </div>
 
@@ -189,7 +188,7 @@
         <div class="code-features__video-container">
             <button data-id="video3" class="code-features__video-play"></button>
             <video id="video3" class="code-features__video">
-                <source src="images/3_small.mp4" type="video/mp4">
+                <source src="../../images/3_small.mp4" type="video/mp4">
             </video>
         </div>
 
@@ -203,7 +202,7 @@
         <a href="https://meetingapplication.com/event-app-tour/"
            class="button button--big">
             EXPLORE ALL FEATURES
-            <img class="core-features__button__icon" src="images/next.svg" />
+            <img class="core-features__button__icon" src="../../images/next.svg" />
         </a>
     </div>
 
@@ -239,7 +238,7 @@
 
         <article data-showid="pharma" class="industries__info">
             <div class="industries__image">
-                <img src="images/Pharma.png" />
+                <img src="../../images/Pharma.png" />
             </div>
 
             <div class="industries__info__block">
@@ -262,12 +261,12 @@
                     <div class="industries__info__clients__list">
 
                         <img height="80" alt="Bayer Company Logo" title="Bayer Company Logo"
-                             src="./images/bayer.png" />
+                             src="../../images/bayer.png" />
 
-                        <img height="60" alt="GSK Company Logo" title="GSK Company Logo" src="images/logo-gsk.png" />
+                        <img height="60" alt="GSK Company Logo" title="GSK Company Logo" src="../../images/logo-gsk.png" />
 
                         <img height="60" alt="Sanofi Company Logo" title="Sanofi Company Logo"
-                             src="images/sanofi.png" />
+                             src="../../images/sanofi.png" />
 
                         <a href="https://meetingapplication.com/pharmaceutical-conference-app"
                            class="button industries__info__clients__button">
@@ -280,7 +279,7 @@
 
         <article data-showid="gov" class="industries__info">
             <div class="industries__image">
-                <img src="./images/Gov.png" />
+                <img src="../../images/Gov.png" />
             </div>
 
             <div class="industries__info__block">
@@ -302,16 +301,16 @@
                         <img height="55"
                              alt="US Health Department Logo"
                              title="US Health Department Logo"
-                             src="images/ushealthdep.png" />
+                             src="../../images/ushealthdep.png" />
 
 
                         <img height="25"
                              alt="Singapore Government Logo"
                              title="Singapore Government Logo"
-                             src="images/singappur.png" />
+                             src="../../images/singappur.png" />
 
                         <img height="50" alt="EU Commission  Logo" title="EU Commission Logo"
-                             src="images/komisja.png" />
+                             src="../../images/komisja.png" />
 
 
                         <a href="https://meetingapplication.com/pharmaceutical-conference-app" class="button industries__info__clients__button">
@@ -324,7 +323,7 @@
 
         <article data-showid="music" class="industries__info">
             <div class="industries__image">
-                <img src="./images/Fest.png" />
+                <img src="../../images/Fest.png" />
             </div>
 
             <div class="industries__info__block">
@@ -344,13 +343,13 @@
                     <h3>Clients</h3>
 
                     <div class="industries__info__clients__list">
-                        <img height="30" alt="Raindance Logo" title="Raindance Logo" src="images/raindance.png" />
+                        <img height="30" alt="Raindance Logo" title="Raindance Logo" src="../../images/raindance.png" />
 
-                            <img height="55" alt="Sunny side of Doc Logo" title="Sunny side of Doc Logo"
-                             src="images/logo-sunnyside.png" />
+                        <img height="55" alt="Sunny side of Doc Logo" title="Sunny side of Doc Logo"
+                             src="../../images/logo-sunnyside.png" />
 
                         <img height="50" alt="Imagination Days Cannes Logo" title="Imagination Days Cannes Logo"
-                             src="images/imaginationdayscannes.png" />
+                             src="../../images/imaginationdayscannes.png" />
 
                         <a href="https://meetingapplication.com/film-festival-app/" class="button industries__info__clients__button">
                             Learn more
@@ -362,7 +361,7 @@
 
         <article data-showid="corp" class="industries__info">
             <div class="industries__image">
-                <img src="./images/corp.png" />
+                <img src="../../images/corp.png" />
             </div>
 
             <div class="industries__info__block">
@@ -382,11 +381,11 @@
                     <h3>Clients</h3>
 
                     <div class="industries__info__clients__list">
-                        <img height="50" src="images/dhl-logo.jpg" />
+                        <img height="50" src="../../images/dhl-logo.jpg" />
 
-                        <img height="22" src="images/AccorHotels_Logo.png" />
+                        <img height="22" src="../../images/AccorHotels_Logo.png" />
 
-                        <img height="22" src="images/sephora-logo.png" />
+                        <img height="22" src="../../images/sephora-logo.png" />
 
                         <a href="https://meetingapplication.com/corporate-event-app/" class="button industries__info__clients__button">
                             Learn more
@@ -410,7 +409,7 @@
 
     <article class="testimonials__users">
         <div class="testimonials__user">
-            <img src="images/testimonial-user1.png" />
+            <img src="../../images/testimonial-user1.png" />
 
             <h3 class="testimonial__user-name">
                 Mike Kopyra
@@ -429,7 +428,7 @@
         </div>
 
         <div class="testimonials__user">
-            <img src="images/testimonial-user1.png" />
+            <img src="../../images/testimonial-user1.png" />
 
             <h3 class="testimonial__user-name">
                 Mike Kopyra
@@ -448,7 +447,7 @@
         </div>
 
         <div class="testimonials__user">
-            <img src="images/testimonial-user1.png" />
+            <img src="../../images/testimonial-user1.png" />
 
             <h3 class="testimonial__user-name">
                 Mike Kopyra
@@ -549,7 +548,7 @@
     <a href="https://meetingapplication.com/get-your-app/"
        class="button button--big">
         START FREE TRIAL
-        <img class="core-features__button__icon" src="images/next.svg" />
+        <img class="core-features__button__icon" src="../../images/next.svg" />
     </a>
 </section>
 
@@ -573,7 +572,7 @@
         </div>
 
         <div class="support__image">
-            <img src="images/support-image.png" />
+            <img src="../../images/support-image.png" />
         </div>
     </div>
 
@@ -589,11 +588,11 @@
 
     <div class="blog__images">
         <a class="blog__image">
-            <img src="./images/blog1.png" />
+            <img src="../../images/blog1.png" />
         </a>
 
         <a class="blog__image">
-            <img src="./images/blog2.png" />
+            <img src="../../images/blog2.png" />
         </a>
     </div>
 
@@ -612,7 +611,7 @@
 
                 <div class="footer__logo-image" itemscope itemtype="http://schema.org/Organization">
                     <a itemprop="url">
-                        <img src="images/logo-nav.png" itemprop="logo" />
+                        <img src="../../images/logo-nav.png" itemprop="logo" />
                     </a>
                 </div>
 
@@ -705,24 +704,24 @@
 
         <div class="footer__social">
             <a href="https://www.linkedin.com/company/5150093" target="_blank">
-                <img src="images/linked-in.png" class="footer__social__image" />
+                <img src="../../images/linked-in.png" class="footer__social__image" />
             </a>
 
             <a href="https://twitter.com/Meeting_App" target="_blank">
-                <img src="images/twitter.png" class="footer__social__image" />
+                <img src="../../images/twitter.png" class="footer__social__image" />
             </a>
 
             <a href="https://www.facebook.com/MeetingApplication" target="_blank">
-                <img src="./images/facebook.png" class="footer__social__image" />
+                <img src="../../images/facebook.png" class="footer__social__image" />
             </a>
 
             <div class="footer__stores">
                 <a href="https://play.google.com/store/apps/details?id=us.appswith.meetingapplication" target="_blank">
-                    <img src="./images/google-play.png" class="footer__stores__image" />
+                    <img src="../../images/google-play.png" class="footer__stores__image" />
                 </a>
 
                 <a href="https://itunes.apple.com/us/app/meeting-application/id773192307" target="_blank">
-                    <img src="./images/app-store.png" class="footer__stores__image" />
+                    <img src="../../images/app-store.png" class="footer__stores__image" />
                 </a>
             </div>
         </div>
@@ -731,8 +730,6 @@
         @ 2012-2018 Meeting Application. All rights reserved.
     </p>
 </footer>
-<script src="./countUp.js"></script>
-<script src="./index.js"></script>
 
 </body>
 
